# 3psLCCA-gui

./: .gitignore  digest.txt  environment.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: release.yml
api/: bridge.md  info.md  init.py  main.md  setup.md  structure.md  traffic.md
conda-recipe/: meta.yaml
core/: readme.md  safechunk_engine.py  start_manager.py
core/report-env/: .gitignore  readme.md  setup_assets.py
core/report-env/osdag_latex_env/: __init__.py  latex_env.py
data/: generate_wpi_hash.py  wpi_db.json
data/user_db/: profile.json
devtools/: catalog_builder_gui.py  country_manager_gui.py  custom_db_viewer_gui.py  devtools_window.py  docs_build.py  docs_builder_gui.py  docs_check_links.py  docs_viewer_example.py  integrity_tool_gui.py  launcher.py  lcca_codec.py  main.py  sor_generator_gui.py  sor_json_generator.py  unit_manager_gui.py  unit_system.md  wpi_tool.py
docs/general/: project-currency.md  project-name.md  sor-database.md  unit-system.md
gui/: main.py  palette_manager.py  project_controller.py  project_manager.py  project_window.py  styles.py  theme.py  version.py
gui/assets/themes/: lightstyle.qss  main.qss
gui/components/: agency_profile_dialog.py  base_widget.py  blob_manager.py  checkpoint_dialog.py  first_launch_dialog.py  home_page.py  logs.py  new_project_dialog.py  recovery_dialog.py  rollback_dialog.py  save_status_bar.py  settings_dialog.py  splash_screen.py  splash_screen_old.py  tamper_dialog.py
gui/components/bridge_data/: main.py
gui/components/carbon_emission/: main.py
gui/components/demolition/: main.py
gui/components/financial_data/: main.py
gui/components/global_info/: main.py
gui/themes/: __init__.py  sample.yaml  verify_theme.py
report/: lcca_generate.py  lcca_template.py
user_projects/proj_877d7a81/: version.json
user_projects/proj_c2077bcd/: version.json
user_projects/proj_f9a3c201/: version.json
(+155 files in other folders)
